# leetcode-for-system-design-

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json  settings.local.json
apps/api/: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 7554b341043a_initial_schema.py  b1f4a2c8d7e3_add_problem_kind.py
apps/api/app/: main.py
apps/api/app/auth/: cookies.py  dependencies.py  router.py  schemas.py  service.py
apps/api/app/core/: config.py  limiter.py  security.py
apps/api/app/db/: models.py  session.py
apps/api/app/evaluation/: dependencies.py  groq_provider.py  hints_prompt.py  pattern_prompts.py  prompt.py  provider.py  router.py  schemas.py  service.py  solution_prompt.py
apps/api/app/problems/: router.py  schemas.py
apps/api/app/submissions/: router.py  schemas.py
apps/api/scripts/: check_db.py  list_tables.py  seed_problems.py
apps/api/scripts/problems/: __init__.py  design_patterns.py  system_design.py
apps/web/: README.md  global.d.ts  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/problems/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/components/: auth-form.tsx  brand-mark.tsx  nav.tsx  problem-card.tsx  storyboard.tsx
apps/web/components/landing/: buttons.tsx  final-cta.tsx  footer.tsx  hero.tsx  pipeline.tsx  problems-section.tsx
apps/web/lib/: api.ts  auth.tsx
docs/: AI_EVALUATION.md  API_DESIGN.md  ARCHITECTURE.md  DATA_MODELS.md  DEPLOYMENT.md  MVP.md  TECH_STACK.md
infra/: docker-compose.yml
(+20 files in other folders)
